# lsn_decorators

./: pyproject.toml  requirements.txt
src/: access_control.py  closure.py  decorarors.py  decorator_wraps.py  decorators_with_args.py  decorators_with_args_syntax.py  decorators_without_args.py  decorators_without_args_syntax.py  hw1_check_integers.py  hw2_retry.py  hw3_yield_items.py  hw4_shorted_words.py  hw5_dots_and_marks.py  whats_doing_wrapper.py
