[project]
name = "lsn-decorators"
version = "0.1.0"
description = ""
authors = [
    {name = "Aleksey Zvyagintsev",email = "alex0236889@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
